Mise ajours client
